--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -25,9 +25,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      # Run tests
-      - name: Run Tests
-        run: npm test
+      # # Run tests
+      # - name: Run Tests
+      #   run: npm test
 
       # Install Vercel CLI
       - name: Install Vercel CLI
