fetching image from vercel

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ DATABASE_URL="postgresql://postgres.bpqsnwsqhoslhgdarrvr:VehzPhhdqT9eoJ8V@aws-0-
 DIRECT_URL ="postgresql://postgres.bpqsnwsqhoslhgdarrvr:VehzPhhdqT9eoJ8V@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 JWT_ACCESS_KEY="kodingacademy24"
 ALLOWED_ORIGIN="http://localhost:3000"
+NEXT_PUBLIC_API_URL_IMG=https://bootcamp-backend-batch5-beta.vercel.app/api/images
+PROTOCOL=https
+HOSTNAME=bootcamp-backend-batch5-beta.vercel.app
